# LogZ

./: CMakeLists.txt  LogZ_en_HR.ts  README.md  main.cpp
Model/inc/: FileExtractor.h  LogManager.h
Model/src/: FileExtractor.cpp  LogManager.cpp
View/inc/: GroupManager.h  HelpDialog.h  clickabletextedit.h  customtextedit.h  fileitemdelegate.h  finddialog.h  mainwindow.h  zipviewerdialog.h
View/src/: GroupManager.cpp  HelpDialog.cpp  clickabletextedit.cpp  customtextedit.cpp  fileitemdelegate.cpp  finddialog.cpp  mainwindow.cpp  mainwindow.ui  zipviewerdialog.cpp
